# agent-leaderboard

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.toml  main.py  package-lock.json  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
deployments/huggingface/: README.md  main.py  requirements.txt
deployments/render/: .gitignore  IMPLEMENTATION.md  README.md  main.py  render.yaml  requirements.txt
deployments/render/static/css/: components.css  modal.css  styles.css  tabs.css
deployments/render/static/js/: app.js
deployments/render/templates/: base.html  index.html
deployments/render/templates/components/: alerts.html  execution_detail_inline.html  execution_detail_modal.html  tool_tree.html
deployments/render/templates/partials/: execution_results.html  leaderboard.html
deployments/render/templates/tabs/: execution.html  history.html  performance.html  settings.html
docs/: conf.py  deployment-hf.md  deployment-render.md  index.md
shared/: config.toml  database.db  pyproject.toml  requirements-core.txt
shared/src/config/: models.py
shared/src/database/: repositories.py
shared/src/execution/: evaluator.py
shared/src/models/: execution.py
shared/src/ui/components/: history_list.py  input_form.py  leaderboard.py  settings.py  tool_tree.py
shared/src/ui/pages/: main.py
specs/001-agent-leaderboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agent-leaderboard/checklists/: requirements.md
specs/001-agent-leaderboard/contracts/: internal-api.md
src/: main.py
src/agents/: eval_agent.py  task_agent.py  tools.py
src/config/: defaults.py  loader.py  models.py
src/database/: connection.py  repositories.py  schema.py
src/execution/: evaluator.py  executor.py  state.py  timeout.py
src/models/: evaluation.py  metrics.py  task.py
src/ui/components/: agent_responses.py  charts.py  execution_log.py  history_list.py  input_form.py  leaderboard.py  settings.py  status_display.py  tool_tree.py
src/ui/pages/: history.py  main.py  performance.py  settings.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_agent_execution.py  test_database_persistence.py  test_ui_integration.py
tests/unit/: test_agents.py  test_aggregated_metrics.py  test_config.py  test_execution.py  test_models.py  test_provider_mapping.py  test_tools.py
